src/index.css
body {
  font-family:'Courier New', Courier, monospace;
  font-size: 20px;
  background-color: rgb(13, 158, 242);
  background-color: rgba(210, 137, 27, 0.745);
  color: #68034f;
  align-items: center;
  justify-content: center;
  text-align: center;
  background-size: auto;
  
 
}

h1,

h3,
h4,
h5,
h6 {
  font-family: 'Courier New', Courier, monospace;
  background-color: rgb(253, 251, 253);  
}
h2,

h1, 
h3{
  font-family: 'Courier New', Courier, monospace;
  align-items: center;
  justify-content: center;
  text-align: center;
}

#logo {
  background-color: rgb(54, 170, 238);
  font-size: 2.2em;
  display: inline-block;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
 
 
}
p {
  margin-bottom: 1em;
}

nav {
  background-color: rgb(103, 36, 238);
  align-items: center;
  justify-content: center;
  text-align: center;
  
}

nav a {
  display: inline-block;
  margin: 1rem 2rem;
  text-decoration: none;
  font-size: 1.2em;
  color: rgb(247, 239, 239);
  border-bottom: 6px solid #f2eaea;
  transition: 0.1s;
}

nav a:hover,
nav a:active {
  color: tomato;
  border-bottom: 2px solid tomato;
}

img {
 border: 1px solid #ddd;
  border-radius: 100px;
  padding: 5px;
  width: 150px;
  align-items: center;
  justify-content: center;
  text-align: center;
  display: block;
  margin-left: auto;
  margin-right: auto;
  
}

#card {
  grid-template-rows: max-content 200px 1fr;
  height: 200px;
  display: inline-block;
  box-sizing: border-box;
  width:auto;
  align-content: auto;
  border: solid #5B6DCD 10px;
  padding: 5px;
  height: fit-content;
 
}

#course-list {
  background-color: rgb(247, 250, 251);

}
#logo{
  background-color: rgb(54, 170, 238);
  font-size: 2.2em;
  
 
 
}

#home {
  height: 50vh;
  min-height: 400px;
  background-color: cornsilk;
}

#home,
#about,
#projects {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
  padding: 1rem;
}
input[type=text], select {
  width: 65%;
  padding: 5px 9px;
  margin: 4px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

input[type=submit] {
  width: 100%;
  background-color: orange;
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}
#form {
  border-radius: 5px;
  background-color: #f2f2f2;
  padding: 20px;
  
}
#videos-container {
  max-width: 60%;
  height: auto;
}

#about a {
  display: block;
}

#projects {
  background-color: cornsilk;
  min-height: 400px;
}

#project-list {
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 100%;
  max-width: 800px;
}

.project-item {
  background-color: white;
  padding: 2rem;
  margin: 1rem;
}

.technologies span {
  background-color: lightblue;
  margin: 0.25rem;
  padding: 0.5rem;
  border-radius: 4px;
  display: inline-block;
}

@media (min-width: 700px) {
  #project-list {
    flex-direction: row;
  }

  .project-item {
    width: 50%;
  }
}

